# Grasp

DORA/: README.md
DORA/dora_moveit_config/: CMakeLists.txt  package.xml
DORA/dora_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  mir100_mobile_robot.srdf  ompl_planning.yaml  ros_controllers.yaml  sensors_kinect_pointcloud.yaml  simple_moveit_controllers.yaml
DORA/dora_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  mir100_mobile_robot_moveit_sensor_manager.launch.xml  move_group.launch  move_group_real.launch  moveit.rviz  moveit_rviz.launch  (+7 more)
DORA/gpd_ros/: README.md.bak
mobile_manipulator/: CMakeLists.txt  package.xml
mobile_manipulator/launch/: dora_simulation_demo.launch  mobile_navigation.launch  passthrough.launch
mobile_manipulator/src/: camera_tf_from_model_state.py  grasp_pose_subscriber_sim.py  move_object.py  move_object_to_bin.py  move_object_to_bin_subscriber.py  navigation_goal.py  navigation_goal_v2.py  navigation_testing.py  perform_grasp_sim.py  point_cloud_grasp.py  point_cloud_subscriber.py
mobile_manipulator/urdf/: dora_new.xacro  mobile_manipulator.xacro
pipeline/: CMakeLists.txt  README.md  package.xml
pipeline/gpd/: CMakeLists.txt
pipeline/gpd/cfg/: eigen_params.cfg
pipeline/launch/: pipeline.launch
pipeline/rviz/: vision.rviz
pipeline/scripts/: add_new_object_to_database.py  get_grasp_poses_from_camera_data_publisher.py  get_pose_robot.py  get_pose_robot_publisher.py
pipeline/scripts/AprilTag/: CMakeLists.txt
(+55 files in other folders)
